--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+asgiref==3.6.0
+autopep8==2.0.2
 Django==4.2
 django-cors-headers==3.14.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-python-dotenv==1.0.0
+Faker==18.4.0
 Pillow==9.5.0
+pycodestyle==2.10.0
+PyJWT==2.6.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+six==1.16.0
+sqlparse==0.4.4
+tomli==2.0.1
